<resources>
    <string name="app_name">Quiz App</string>
    <string name="settings">Settings</string>
    <string name="score">Scores</string>
    <string name="start">Start</string>
    <string name="create">Create Your Own Quiz</string>
    <string name="music">Music</string>
    <string name="timer">Speed Mode</string>
    <string name="clear">Clear Data</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string-array name="catergoryList">
        <item>Biology</item>
        <item>Java</item>
        <item>Chemistry</item>
        <item>Cardiology</item>
        <item>Created Quiz</item>
    </string-array>
    <string name="selectedTopic">Selected Topic</string>
    <string name="timeLeft">00:30s</string>
    <string name="questionNumber">1/20</string>
    <string name="questions">Question here...</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="next">Next</string>
    <string name="complete">You\'ve successfully completed the quiz!</string>
    <string name="scoreboard">ScoreBoard</string>
    <string name="footer">Thank you for playing!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>