<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0D1F6BB8"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_200">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/black"
            android:fontFamily="casual"
            android:text="@string/back"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectedTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/selectedTopic"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="Timer"
            android:textColor="@color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_white"
        android:elevation="1dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/questionNumber"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_yellow"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="@string/questions"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke"
        android:text="@string/option1"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke"
        android:text="@string/option2"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke"
        android:text="@string/option3"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_stroke"
        android:text="@string/option4"
        android:textAllCaps="false"
        android:textColor="#1F6BB8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:background="@drawable/round_back_green"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"/>
    </LinearLayout>

</ScrollView>